# rust-for-bitcoiners

./: .gitignore  README.md  RustCoursePlan.md  RustForBitcoinersCoutseOutline.md  day1.md
bitcoin_in_rust/: Cargo.toml  bitcoin_keywords.md
bitcoin_in_rust/ch0/: hashing.rs  one_way_functions_examples.md
bitcoin_in_rust/ch1/: lesson.md
bitcoin_in_rust/ch2/: mining.md  segwit.md
bitdevs/: playgrounds.md
blockchain_analysis/: .env  Cargo.toml  out.txt
c_and_rust/day2/: a.out  (+3 more)
cmd_wallet/: Cargo.toml
curriculum/: README.md  preface.md
day1/: day1.md  integers.c  intro.rs
day2/: a.out  arbitrary_pointers.c  day2.md  outer_outlives_inner.c  returning_reference_to_heap.c  returning_references.rs  ro_data.c
day3/: day3.md  generic_lifetime_vs_specific_lifetime.rs
projects/: generate_all_subsets.rs  project1.rs  project2.rs  project3.rs  project4.rs  project5.rs
rust-for-bitcoiners-1/: plan.md
rust-for-bitcoiners-1/day5/axum_demo/: Cargo.toml
rust-for-bitcoiners-1/day5/axum_demo/src/: basics.rs  irrefutable_patterns.rs  main.rs
rust-for-bitcoiners-2/: QandA_for_assignment_1.md  office_hour_1.md  plan.md  updating_upstream_manually.md
rust-for-bitcoiners-2/assignments/a-5/rust/: Cargo.toml
rust-for-bitcoiners-2/assignments/a-8/rust/: Cargo.toml
rust-for-bitcoiners-2/assignments/a-8/rust/src/: main.rs
rust-for-bitcoiners-self-learning/: README.md  plan.md
self-paced/: ideas.md
tutorials/: Analyzing_Transaction_Fee.md  Analyzing_privacy_of_transaction.md  Building_UTXO_Set.md  JSON_serialization_with_serde.md
utxo_tracking/: Cargo.toml
(+166 files in other folders)
