[package]
name = "axum_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
bitcoin = "0.31.2"
colored = "2.1.0"
http-body-util = "0.1.1"
serde = { version = "1.0.198", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4.13"
