[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
dns-lookup = "2.0.4"
rand = "0.8.5"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
bitcoin = { version = "0.32", features = ["bitcoinconsensus"] }
hex = "0.4.3"
